# nix-agents

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  flake.nix
.claude/: settings.local.json
.github/workflows/: nightly-flake-update.yml  pr-ci.yml
agents/: 10xBEAST.nix  bottleneck.nix  chaos-demon.nix  code-monkey.nix  code-red.nix  explore.nix  scribe.nix  the-architect.nix
checks/: evals.nix
defs/agents/: 10xBEAST.nix  architect-manager.nix  bottleneck.nix  chaos-demon.nix  code-monkey.nix  code-red.nix  coo.nix  eng-manager.nix  explore.nix  orchestrator.nix  prod-manager.nix  qa-manager.nix  scribe.nix  the-architect.nix
defs/hooks/: session-write.nix
defs/mcps/: agent-observe.nix  swe-pruner.nix
defs/skills/: add-module.nix  nix-coding-style.nix  nix-flake-ops.nix  nix-module-workflow.nix  parallel-reviews.nix  secrets-management.nix  session-resume.nix  skill-creator.nix  swe-pruner-mcp.nix
docs/adr/: ADR-0001-base-profile-hierarchy.md  README.md
docs/agents/: 2026-03-05-composable-agents-spec.md
docs/plans/: 2026-03-15-roadmap.md  (+1 more)
evals/: package.json  promptfoo.yaml
lib/: builders.nix  default.nix  eval.nix  types.nix
modules/: agent.nix  base.nix  hook.nix  human.nix  mcp-server.nix  profile.nix  provider.nix  skill.nix  system.nix
presets/: default.nix  minimal.nix  profiles-v2.nix  profiles.nix  security.nix  tiered.nix
services/swe-pruner/: default.nix  pyproject.toml
skills/: nix-coding-style.nix  nix-flake-ops.nix  nix-module-workflow.nix  secrets-management.nix  skill-creator.nix  swe-pruner-mcp.nix
(+75 files in other folders)
